feat: add endpoint which redirects to current user resource
